# mimir-framework

./: .gitattributes  .gitignore  .luarc.json  API_STUB_UPDATE.md  API_SYNC_COMPLETE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DOCS_INDEX.md  DOCS_UPDATE_CHANGELOG.txt  DOCUMENTATION.md  LICENSE  Makefile  PULL_REQUEST.md  README.md  README.md.old  RELEASE_NOTES_2.1.0.md  SCRIPTS_UPDATED.md  SUMMARY_API_UPDATE.md  config.json  hardinfo2_report.txt  insomnia_mimir_api.json  migrate_lua_api.sh  mimir-api.lua  profile_bench.sh  run_mimir.sh  viz_ui_settings.json
.github/workflows/: unit-tests.yml  wiki.yml
Tests/: CMakeLists.txt  test_encoder_basics.cpp  test_layers_all_types.cpp  test_layers_named_routing.cpp  test_lr_decay_boundaries.cpp  test_lr_decay_warmup.cpp  test_lua_api_basics.cpp  test_lua_create_from_config.cpp  test_lua_create_from_config_errors.cpp  test_memory_guard.cpp  test_model_train_step_freeze.cpp  test_model_weight_blocks.cpp  test_override_errors.cpp  test_override_parsing.cpp  test_registry_aliases.cpp  test_registry_cfg_from_config.cpp  test_registry_create_from_config.cpp  test_runtime_embedding_int_inputs.cpp  test_runtime_residual_merge.cpp  test_serialization_corrupted.cpp  test_serialization_deterministic.cpp  test_serialization_rawfolder_model.cpp  test_serialization_roundtrip.cpp  test_serialization_safetensors_model.cpp  test_serialization_strict_missing_assets.cpp  test_tokenizer_basics.cpp  test_tokenizer_bpe.cpp  test_tokenizer_json_control_chars.cpp  test_utils.hpp
docs/: 00-INDEX.md  API_CPP.md  API_LUA.md  API_SYNCHRONIZATION_COMPLETE.md  ARCHITECTURE.md  INDEX.md  INSTALLATION.md  LUA_API.md  LUA_IDE_SETUP.md  MIGRATION_V2.md  PIPELINE_API.md  PIPELINE_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  WHY_CPU_ONLY.md
docs/01-Getting-Started/: 01-Quick-Start.md  02-Installation.md  03-CLI.md  03-IDE-Setup.md  04-Repo-Layout.md  05-Smoketest.md  06-Rebuild-And-Test.md  START_HERE.md
docs/02-User-Guide/: 01-Core-Concepts.md  02-Model-Creation.md  02-Model-Lifecycle.md  03-Data.md  03-Predefined-Architectures.md  04-Tokenization.md  04-Training.md  05-Data-Management.md  05-Inference.md  06-Lua-Scripting.md  06-Training.md  07-Inference.md  07-Tokenizer-Encoder.md  08-Checkpoints.md  09-Memory.md  09-Monitoring.md  10-Examples.md  10-Memory-Best-Practices.md  11-VAEText.md  12-Transformer-GPT.md  13-Diffusion.md
docs/03-API-Reference/: 00-API-Complete.md  00-API-Overview.md  01-API-Quick-Reference.md  01-Layers.md  02-Serialization.md  10-Model.md  11-Architectures.md  12-Tokenizer.md  13-Dataset.md  14-Memory.md  15-Viz-Htop.md  16-Serialization.md  17-NeuroPulse.md  18-Layers-Module.md  19-Globals.md  20-Lua-API-Cpp-Mapping.md  API_LUA_UPDATE_v2.2.0.md  API_LUA_UPDATE_v2.3.0.md  API_STRUCTURE.md  ENHANCED_DEBUG_JSON.md  LAYERS_REFERENCE.md  MIMIR_API_COMPLETE.md  MULTI_INPUT_SUPPORT.md  SAVE_LOAD.md  SERIALIZATION_API_VALIDATED.md
docs/04-Architecture-Internals/: 00-Internals-Index.md  01-Engine-Overview.md  01-System-Architecture.md  02-Memory.md  02-Runtime-Engine.md  03-Hardware-Backends.md  03-Technical-Specifications.md  04-Memory-Management.md  04-Monitoring-Htop-Visualizer.md  05-AdvancedRAMManager.md  05-Threading-And-Compute.md  06-Memory-Safety-Fixes.md  07-Hardware-Optimizations.md  08-Tensor-System.md  09-API-Updates.md  10-Flux-Implementation.md  10-Flux-Model.md  10-Model-Class.md  11-Helpers.md  12-Tensor-Storage.md  13-Autograd-Gradients.md  14-Layers-And-Ops.md  15-Serialization-Internals.md  16-Tokenizer-Encoder-Internals.md  17-Lua-Bindings-Internals.md  18-RuntimeAllocator-And-Scratchpads.md  19-Models-Registry-And-Builders.md  20-CLI-EntryPoints.md  SERIALIZATION_COMPLETE.md  TECHNICAL_STATUS.md
docs/05-Advanced/: 01-Performance.md  01-Pipeline-API.md  02-Debugging.md  03-LLM-Readiness.md  03-Training-Complete.md  04-Layer-Operations.md  04-Source-Code-Map.md  05-Model-Architectures.md  06-Memory-Blocking.md  07-Branch-Operations.md  08-Branch-System.md  10-Conv2D-Completion.md  11-Conv2D-Improvements.md  BENCHMARKS_MIGRATION.md  MIGRATION_STRICT_MODE.md  PERFORMANCE.md
docs/06-Contributing/: 01-Contributing.md  02-Pull-Request-Template.md  04-Documentation-Guide.md  06-Documentation-Updates.md  07-Scripts-Updates.md  HOWTO_ADD_LAYER.md
docs/Archives/: CORRECTIFS_APPLIQUES.md  CORRECTIONS_APPLIQUEES.md  DOCUMENTATION_UPDATE_v2.2.0.md  DOCUMENTATION_UPDATE_v2.3.0.md  MEMORY_LIMIT_10GB.md  MISSION_COMPLETE.md  REFONTE_COMPLETE.md  RELEASE_NOTES_2.1.0.md  VERIFICATION_COMPLETE_REPORT.md
docs/graphs/: README.md
examples/: async_monitoring_demo.lua  demo_serialization.lua  model_architectures_demo.cpp  multi_input_patterns.lua  residual_block_demo.lua
scripts/: README.md  benchmark.lua  demo_diffusion.lua  demo_mobilenet.lua  demo_vae.lua  example_gpt.lua  example_simple.lua  example_training.lua  pipeline_api.lua  test_simple.lua  test_tokenizer.lua  train_complete.lua
scripts/benchmarks/: benchmarck_official.lua  benchmark.lua  benchmark_complet.lua  benchmark_conv_train.lua  benchmark_official.lua  benchmark_stress.lua
scripts/demos/: demo_10gb_limit.lua  demo_branches.lua  demo_diffusion.lua  demo_gan.lua  (+6 more)
shaders/: linear_forward.comp
src/: AdvancedRAMManager.hpp  AsyncMonitor.hpp  Autograd.hpp  ConfigOverrides.cpp  ConfigOverrides.hpp  DynamicTensorAllocator.hpp  Encoder.cpp  Encoder.hpp  HardwareOpt.hpp  Helpers.cpp  Helpers.hpp  HtopDisplay.hpp  LayerOps.hpp  LayerOpsExt.hpp  LayerTypes.hpp  Layers.hpp  LuaScripting.cpp  LuaScripting.hpp  LuaScripting_TokenizerExt.cpp  MemoryGuard.hpp  MemorySafety.hpp  Model.cpp  Model.hpp  OpenCLCompute.hpp  RngContext.hpp  RuntimeAllocator.hpp  SIMD_Ops.hpp  Sha256.cpp  Tokenizer.cpp  Tokenizer.hpp  Visualizer.cpp  Visualizer.hpp  VulkanCompute.hpp  main.cpp  stb_image_impl.cpp  tensors.cpp  tensors.hpp
tests/: README.md  test_autograd.cpp  test_hardware.cpp  test_layer_fusion.cpp  test_layers.cpp  test_memory_blocking.cpp  test_model.cpp  test_serialization.cpp  test_tensors.cpp  test_tokenizer.cpp
(+175 files in other folders)
